@startuml
title US032-CD

skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

package "ui.console" #DDDDDD {
    class EnableDisableUserUI {
        - enableUserController: EnableUserController
        - disableUserController: DisableUserController
        - scanner: Scanner
        + run(): void
    }
}

package "controller" #DDDDDD {
    class EnableUserController {
        - enableUserService: EnableUserService
        + enableUser(email: String): User
    }

    class DisableUserController {
        - disableUserService: DisableUserService
        + disableUser(email: String): User
    }
}

package "application" #DDDDDD {
    class EnableUserService {
        - userRepository: UserRepository
        - authorizationService: AuthorizationService
        + enableUser(emailValue: String): User
    }

    class DisableUserService {
        - userRepository: UserRepository
        - authorizationService: AuthorizationService
        + disableUser(emailValue: String): User
    }

    class AuthorizationService {
        + isAuthorized(permissionName: String): boolean
        + requirePermission(permissionName: String): void
    }
}

package "domain.user" #DDDDDD {
    class User {
        - email: Email
        - name: String
        - phoneNumber: PhoneNumber
        - enabled: boolean
        - roles: Set<Role>
        - securityClearance: SecurityClearance
        - skillsAssessment: SkillsAssessment
        + enable(): void
        + disable(): void
        + isEnabled(): boolean
        + isDisabled(): boolean
        + status(): String
        + hasPermission(permission: Permission): boolean
    }

    class Email {
        - value: String
        + Email(value: String)
        + value(): String
    }

    class PhoneNumber {
        - value: String
        + PhoneNumber(value: String)
        + value(): String
    }

    class SecurityClearance {
        - expirationDate: LocalDate
        + isValid(currentDate: LocalDate): boolean
    }

    class SkillsAssessment {
        - assessmentDate: LocalDate
        - validityPeriodInMonths: int
        + isValid(currentDate: LocalDate): boolean
    }
}

package "domain.auth" #DDDDDD {
    class Role {
        - name: String
        - permissions: Set<Permission>
        + hasPermission(permission: Permission): boolean
    }

    class Permission {
        - name: String
    }
}

package "repository" #DDDDDD {
    interface UserRepository {
        + findByEmail(email: Email): Optional<User>
        + save(user: User): User
    }
}

EnableDisableUserUI --> EnableUserController : uses >
EnableDisableUserUI --> DisableUserController : uses >
EnableUserController --> EnableUserService : uses >
DisableUserController --> DisableUserService : uses >
EnableUserService --> AuthorizationService : checks permission >
DisableUserService --> AuthorizationService : checks permission >
EnableUserService --> UserRepository : retrieves/saves >
DisableUserService --> UserRepository : retrieves/saves >
EnableUserService --> User : enables >
DisableUserService --> User : disables >

UserRepository --> User : retrieves/saves >
User *-- Email
User *-- PhoneNumber
User *-- SecurityClearance
User *-- SkillsAssessment
User "1" o-- "1..*" Role
Role "1" o-- "*" Permission

@enduml